# pinned-deque

./: Cargo.toml  README.md
benches/: benches.rs
src/: chunk.rs  cmp.rs  impl.rs  intf.rs  iter.rs  lib.rs  page.rs
src/tests/: basic_ops.rs  cmp.rs  intf.rs  iter.rs  mod.rs  util.rs
