[package]
name = "pinned-deque"
version = "0.2.1"
rust-version = "1.73.0"
edition = "2021"
license-file = "LICENSE"
description = """
A high-performance double-ended queue, inspired by BOOST deque.
Every element in this deque is pinned until its popping.
"""
repository = "https://github.com/TimeExceed/pinned-deque"
readme = "README.md"
categories = ["algorithms", "data-structures"]
keywords = ["deque"]

[[bench]]
name = "benches"
harness = false

[dependencies]
page_size = "0.6.0"

[dev-dependencies]
criterion = "0.5"
jemallocator = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# blist = "0.0.4"
rblist = "0.1.0"
